--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 -->
 <html>
 	<head>
-		<title>Strata by HTML5 UP</title>
+		<title>Parham Ashur</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -15,11 +15,11 @@
 		<!-- Header -->
 			<header id="header">
 				<div style="text-align: center;" class="inner">
-					<a href="#" class="image avatar"><img src="images/Parham.png" alt="" /></a><br>
+					<a href="#" class="image avatar"><img src="images/Parham.png" alt="Parham Ashur" /></a><br>
 
 					<h1><strong><font size="42">Parham Ashur</font></strong></h1><br />
 						<h1>PhD Student</h1>
-					<a href="mailto:user@domain.com">ashur@em-lyon.com</a>
+					<a href="mailto:ashur@em-lyon.com">ashur@em-lyon.com</a>
 	
 				</div>
 			</header>
