--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 					<section id="two">
 						<h2>Collaborators</h2>
 						<p>
-							I am grateful to my collaborators who have helped and guided me in this journey and can "probably" tell you all about me if you are looking for a reference.
+							I am grateful to my collaborators who have helped and guided me in this journey and can probably tell you all about me if you are looking for a reference.
 							At Emlyon, Ruthanne Huising, Christof Brandtner, Tao Han, and Thinley Tharchen are my collaborators. 
 							Outside Emlyon, I have worked with Anne Christophe and Naomi Havron (École Normale Supérieure), Felix Schoeller (Media Lab, MIT), and Gönül Doğan (University of Cologne).  
 						</p>
