--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		<!-- Header -->
 			<header id="header">
 				<div style="text-align: center;" class="inner">
-					<a href="#" class="image avatar"><img src="images/Parham.png" alt="Parham Ashur" /></a><br>
+					<a href="#" class="image avatar"><img src="images/parham-pic.png" alt="Parham Ashur" /></a><br>
 
 					<h1><strong><font size="42">Parham Ashur</font></strong></h1><br />
 						<h1>PhD Student</h1>
