--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
 -->
 <html>
 	<head>
-		<title>Parham Ashur</title>
+		<title>Parham Ashur | PhD student | Emlyon</title>
+		<meta name="description" content="I am a social scientist in the field of management and organization studies
+		at Emlyon Business School.">
+		<meta name="keywords" content="Organization, Sustainability, Inequality, Status, Ranking, Identity">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
