--- a/index.html
+++ b/index.html
@@ -18,8 +18,13 @@
 		<link rel="icon" type="images/png" sizes="32x32" href="favicon-32x32.png">
 		<link rel="icon" type="images/png" sizes="16x16" href="favicon-16x16.png">
 		<link rel="manifest" href="site.webmanifest">
+
+		<!-- google verification --> 
+		<meta name="google-site-verification" content="TlqKJcCj3vGge1E3NwCek3YJYbaQ6m7xx4L8YoX1XGI" />
+
 	</head>
 	<body class="is-preload">
+
 
 		<!-- Header -->
 			<header id="header">
