--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
 		<link rel="icon" type="images/png" sizes="32x32" href="favicon-32x32.png">
 		<link rel="icon" type="images/png" sizes="16x16" href="favicon-16x16.png">
-		<link rel="manifest" href="site.webmanifest">
+		<!-- <link rel="manifest" href="site.webmanifest"> -->
 
 		<!-- google verification --> 
 		<meta name="google-site-verification" content="TlqKJcCj3vGge1E3NwCek3YJYbaQ6m7xx4L8YoX1XGI" />
