--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
 		<!-- Header -->
 			<header id="header">
 				<div style="text-align: center;" class="inner">
-					<a href="#" class="image avatar"><img src="images/parham-pic.jpeg" alt="Parham Ashur" /></a><br>
-
-					<h1><strong><font size="42">Parham Ashur</font></strong></h1><br />
+					<!-- <a href="#" class="image avatar"><img src="images/parham-pic.jpeg" alt="Parham Ashur" /></a><br>
+					-->
+					<h1 style="font-size: 24px"><strong>Parham Ashur</strong></h1><br />
 						<h1>PhD Student</h1>
 					<a href="mailto:ashur@em-lyon.com">ashur@em-lyon.com</a>
 	
