--- a/index.html
+++ b/index.html
@@ -31,8 +31,9 @@
 				<div style="text-align: center;" class="inner">
 					<!-- <a href="#" class="image avatar"><img src="images/parham-pic.jpeg" alt="Parham Ashur" /></a><br>
 					-->
-					<h1 style="font-size: 24px"><strong>Parham Ashur</strong></h1><br />
-						<h1>PhD Student</h1>
+					<br><br><br><br><br><br><br><br><br><br><br>
+					<h1 style="font-size: 32px"><strong>Parham Ashur</strong></h1>
+					<h1>PhD Student</h1>
 					<a href="mailto:ashur@em-lyon.com">ashur@em-lyon.com</a>
 	
 				</div>
