--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	Strata by HTML5 UP
 	html5up.net | @ajlkn
 -->
-<html>
+<html lang="en">
 	<head>
 		<title>Parham Ashur | PhD student | Emlyon</title>
 		<meta name="description" content="I am a social scientist in the field of management and organization studies
