--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 					-->
 					<br><br><br><br><br><br><br><br><br><br><br>
 					<h2 style="font-size: 32px"><strong>Parham Ashur</strong></h2>
-					<h2>PhD Student</h2>
+					<h2 style="font-size: 24px">PhD Student</h2>
 					<a href="mailto:ashur@em-lyon.com">ashur@em-lyon.com</a>
 	
 				</div>
