--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
 				<div style="text-align: center;" class="inner">
 					<!-- <a href="#" class="image avatar"><img src="images/parham-pic.jpeg" alt="Parham Ashur" /></a><br>
 					-->
-					<br><br><br><br><br><br><br><br><br><br><br>
-					<h2 style="font-size: 32px"><strong>Parham Ashur</strong></h2>
-					<h2 style="font-size: 24px">PhD Student</h2>
+					<br><br><br><br><br><br><br><br><br><br>
+					<h2 style="font-size: 32px; line-height:80%"><strong>Parham Ashur</strong></h2>
+					<h2 style="font-size: 24px; line-height:80%">PhD Student</h2>
 					<a href="mailto:ashur@em-lyon.com">ashur@em-lyon.com</a>
 	
 				</div>
