added Google tag

--- a/index.html
+++ b/index.html
@@ -5,6 +5,16 @@
 -->
 <html lang="en">
 	<head>
+		<!-- Google tag (gtag.js) -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-EEDP6QR9G6"></script>
+		<script>
+  		window.dataLayer = window.dataLayer || [];
+  		function gtag(){dataLayer.push(arguments);}
+ 		 gtag('js', new Date());
+
+ 		 gtag('config', 'G-EEDP6QR9G6');
+		</script>
+		
 		<title>Parham Ashur | PhD student | Emlyon</title>
 		<meta name="description" content="I am a social scientist in the field of management and organization studies
 		at Emlyon Business School.">
