--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 
 		<!-- Favicon -->
 		<link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
-		<link rel="icon" type="images/png" sizes="32x32" href="favicon-32x32.png">
-		<link rel="icon" type="images/png" sizes="16x16" href="favicon-16x16.png">
+		<link rel="icon" type="images/png" sizes="32x32" href="favicon-32x32.png?">
+		<link rel="icon" type="images/png" sizes="16x16" href="favicon-16x16.png?">
 		<!-- <link rel="manifest" href="site.webmanifest"> -->
 
 		<!-- google verification --> 
