--- a/index.html
+++ b/index.html
@@ -110,11 +110,14 @@
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
 								<h3>Interviewing management scholars</h3>
-								<p>To better understand the complexity of publication process, Li Ben, Taha Ebrahimnazari, Cristian Taborda, and I interview top scholars in the field. Check out <a href="https://www.youtube.com/channel/UCz9BrEEizi7dKWt9kpBlARg" target="_blank">STORM Youtube Channel<a/>.</p>
+								<p>To better understand the complexity of publication process, Li Ben, Taha Ebrahimnazari, Cristian Taborda, and I 
+									interview top scholars in the field. Check out the
+									<a href="https://www.youtube.com/channel/UCz9BrEEizi7dKWt9kpBlARg" target="_blank">STORM Youtube Channel</a>.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<h3>13th PROS Symposium</h3>
-								<p>I presented my Supervised Research Project (SRP) paper on how various groups of audiences evaluate jurisdictional claims in the context of Gain-of-Function research.</p>
+								<p>I presented my Supervised Research Project (SRP) paper on how various groups of audiences evaluate jurisdictional claims 
+									in the context of Gain-of-Function research.</p>
 							</article>
 
 
