--- a/index.html
+++ b/index.html
@@ -70,12 +70,11 @@
 					<section id="two">
 						<h2>About me</h2>
 						<p style="font-size: 26px; line-height:134%">
-						I am an organizational researcher and a PhD student at Emlyon Business School, where I teach microeconomics in the 
+						I am an organizational researcher and a PhD student at Emlyon Business School, where I teach Tranformations and Microeconomics in the 
 						<a href="https://masters.em-lyon.com/fr/programme-grande-ecole-admission-apres-bac-3-4-5" target="_blank">PGE</a> program. 
-						In my research, I use various machine learning techniques such as structural and dynamic topic modeling to identify patterns in large corpora.
+						In my research, I use various machine learning techniques such as word embeddings, and structural/dynamic topic modeling to identify patterns in large corpora.
 						I am a part of the Strategy & Organization (<a href="https://www.storm.em-lyon.com/people/parham-ashur/" target="_blank">STORM</a>), and
-						 Work, Technology, and Organization (<a href="https://work.em-lyon.com/parham-ashur/" target="_blank">WTO</a>) research centers at Emlyon as well as 
-						 <a href="https://www.ethnographyatelier.org/atelier-people" target="_blank">Ethnography Atelier</a>. 
+						 Work, Technology, and Organization (<a href="https://work.em-lyon.com/parham-ashur/" target="_blank">WTO</a>) research centers at Emlyon. 
 						<br><br>
 						Previously, I worked as a research analyst at École normale supérieure (ENS) and Edelman Intelligence in Paris. 
 						I studied economics at Allameh Tabataba'i University (BA) and the University of Amsterdam (MSc), as well as innovation and management at SKEMA Business School (MSc).</p>
