--- a/index.html
+++ b/index.html
@@ -58,8 +58,13 @@
 							<h1>I am a social scientist in the field of management and organization studies
 							at <a href="https://em-lyon.com/en" target="_blank">Emlyon Business School</a>, France.</h1>
 						</header>
-						<p style="font-size: 26px; line-height:134%">My research explores the interplay between organizations' status/ranking/identity and initiatives 
-							taken toward sustainability/inequality.</p>
+						<p style="font-size: 26px; line-height:134%">In my current research, I draw from cultural studies to investigate 
+							the underlying mechanisms in two distinct but connected bodies of literature: social evaluation and 
+							institutional theory. On the one hand, I investigate how professional evaluations affect laypeople's ratings, 
+							underscoring the critical role of shared cultural frames within diverse collectives of an audience. 
+							On the other hand, I examine the endurance of institutions within cultural and societal shifts. 
+							I explore how institutions adapt to evolving cultural contexts while preserving their identities, 
+							contributing to an understanding of institutional persistence.</p>
 						<!-- <ul class="actions">
 							<li><a href="#" class="button">Learn More</a></li>
 						</ul>-->
