--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
  		 gtag('config', 'G-EEDP6QR9G6');
 		</script>
 		
-		<title>Parham Ashur | PhD student | Emlyon</title>
+		<title>Parham Ashur | PhD candidate | emlyon</title>
 		<meta name="description" content="I am a social scientist in the field of management and organization studies
 		at Emlyon Business School.">
-		<meta name="keywords" content="Organization, Sustainability, Inequality, Status, Ranking, Identity">
+		<meta name="keywords" content="Organizational Theory, Culture, Institution, Social Evaluation">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -56,15 +56,9 @@
 					<section id="one">
 						<header class="major">
 							<h1>I am a social scientist in the field of management and organization studies
-							at <a href="https://em-lyon.com/en" target="_blank">Emlyon Business School</a>, France.</h1>
+							at <a href="https://em-lyon.com/en" target="_blank">emlyon business school</a>, France.</h1>
 						</header>
-						<p style="font-size: 26px; line-height:134%">In my current research, I draw from cultural studies to investigate 
-							the underlying mechanisms in two distinct but connected bodies of literature: social evaluation and 
-							institutional theory. On the one hand, I investigate how professional evaluations affect laypeople's ratings, 
-							underscoring the critical role of shared cultural frames within diverse collectives of an audience. 
-							On the other hand, I examine the endurance of institutions within cultural and societal shifts. 
-							I explore how institutions adapt to evolving cultural contexts while preserving their identities, 
-							contributing to an understanding of institutional persistence.</p>
+						<p style="font-size: 26px; line-height:134%">At the intersection of organization theory and cultural sociology, my research dives into the influence of culture and meaning structures across different levels. Using both quantitative and qualitative methods, I apply a cultural perspective to investigate phenomena like institutional persistence and social evaluation. My work spans various empirical contexts, from social housing to the vibrant landscapes of the creative industry, including areas such as restaurants, books, and movies.</p>
 						<!-- <ul class="actions">
 							<li><a href="#" class="button">Learn More</a></li>
 						</ul>-->
@@ -75,7 +69,7 @@
 					<section id="two">
 						<h2>About me</h2>
 						<p style="font-size: 26px; line-height:134%">
-						I am an organizational researcher and a PhD student at Emlyon Business School, where I teach Tranformations and Microeconomics in the 
+						I am an organizational researcher and a PhD candidate at emlyon business school, where I teach Tranformations and Microeconomics in the 
 						<a href="https://masters.em-lyon.com/fr/programme-grande-ecole-admission-apres-bac-3-4-5" target="_blank">PGE</a> program. 
 						In my research, I use various machine learning techniques such as word embeddings, and structural/dynamic topic modeling to identify patterns in large corpora.
 						I am a part of the Strategy & Organization (<a href="https://www.storm.em-lyon.com/people/parham-ashur/" target="_blank">STORM</a>), and
