--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 					-->
 					<br><br><br><br><br><br><br><br><br><br>
 					<h2 id="name1" style="font-size: 36px; line-height:100%"><strong>Parham Ashur</strong></h2>
-					<h2 style="font-size: 24px; line-height:100%">PhD Student</h2>
+					<h2 style="font-size: 24px; line-height:100%">PhD Candidate</h2>
 					<a href="mailto:ashur@em-lyon.com">ashur@em-lyon.com</a>
 	
 				</div>
@@ -79,7 +79,7 @@
 						I studied economics at Allameh Tabataba'i University (BA) and the University of Amsterdam (MSc), as well as innovation and management at SKEMA Business School (MSc).</p>
 
 						<ul class="actions">
-							<li><a href="pdf/Parham_ASHUR_CV_Dec-2022.pdf" download="Parham_ASHUR_CV_Dec-2022" class="button" target="_blank">Download my CV</a></li>
+							<li><a href="pdf/Parham_ASHUR_CV_March-2024.pdf" download="Parham_ASHUR_CV_March-2024" class="button" target="_blank">Download my CV</a></li>
 							<li><a href="https://github.com/parham-ashur" class="button" target="_blank">Check my GitHub</a></li>
 						</ul>
 					</section> 
