--- a/index.html
+++ b/index.html
@@ -107,6 +107,18 @@
 						<h2>Updates</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
+								<h3>SCANCOR 2023</h3>
+								<p></p>
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
+								<h3>AOM 2023</h3>
+								<p></p>
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
+								<h3>EGOS 2023</h3>
+								<p></p>
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
 								<h3>Interviewing management scholars</h3>
 								<p>To better understand the complexity of publication process, Li Ben, Taha Ebrahimnazari, Cristian Taborda, and I 
 									interview top scholars in the field. Check out the
