--- a/index.html
+++ b/index.html
@@ -108,15 +108,15 @@
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
 								<h3>SCANCOR 2023</h3>
-								<p></p>
+								<p>I was selected to participate in SCANCOR PhD workshop in institutional theory in Oslo.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<h3>AOM 2023</h3>
-								<p></p>
+								<p>Our paper on the dynamic persistence of institutions provides a theory-method package that tackles the question of how institutions persist.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<h3>EGOS 2023</h3>
-								<p></p>
+								<p>I presented a paper on how expert endorsements influence how laypeople evaluate organizations.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<h3>Interviewing management scholars</h3>
