--- a/index.html
+++ b/index.html
@@ -112,12 +112,16 @@
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<h3>AOM 2023</h3>
-								<p>Our paper on the dynamic persistence of institutions provides a theory-method package that tackles the question of how institutions persist.</p>
+								<p>Our paper on the “Dynamic Persistence of Institutions" (with C. Brandtner and B. Srinivasa Desikan) provides a theory-method package that tackles the question of how institutions persist.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<h3>EGOS 2023</h3>
 								<p>I presented a paper on how expert endorsements influence how laypeople evaluate organizations.</p>
 							</article>
+							<article class="col-6 col-12-xsmall work-item">
+								<h3>The 16th advanced Chamonix seminar</h3>
+								<p>I presented a paper on status shock and audience evaluation.</p>
+							</article>							
 							<article class="col-6 col-12-xsmall work-item">
 								<h3>Interviewing management scholars</h3>
 								<p>To better understand the complexity of publication process, Li Ben, Taha Ebrahimnazari, Cristian Taborda, and I 
