--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 								<p>I presented a paper on status shock and audience evaluation.</p>
 							</article>							
 							<article class="col-6 col-12-xsmall work-item">
-								<h3>Interviewing management scholars</h3>
+								<h3>Interviewing management scholars (2023-)</h3>
 								<p>To better understand the complexity of publication process, Li Ben, Taha Ebrahimnazari, Cristian Taborda, and I 
 									interview top scholars in the field. Check out the
 									<a href="https://www.youtube.com/channel/UCz9BrEEizi7dKWt9kpBlARg" target="_blank">STORM Youtube Channel</a>.</p>
