--- a/index.html
+++ b/index.html
@@ -143,8 +143,8 @@
 						<p>
 							I am grateful to my collaborators who have helped and guided me in this journey. 
 							If you are looking for a reference, these people can probably tell you all about me.
-							At Emlyon, Ruthanne Huising, Christof Brandtner, Tao Han, and Thinley Tharchen are my collaborators. 
-							Outside Emlyon, I have worked with Anne Christophe and Naomi Havron (École Normale Supérieure), 
+							At emlyon, Bernard Forgues, Christof Brandtner, Tao Han, and Thinley Tharchen are my collaborators. 
+							Outside emlyon, I have worked with Anne Christophe and Naomi Havron (École Normale Supérieure), 
 							Felix Schoeller (Media Lab, MIT), and Gönül Doğan (University of Cologne).  
 						</p>
 
