--- a/index.html
+++ b/index.html
@@ -58,7 +58,9 @@
 							<h1>I am a social scientist in the field of management and organization studies
 							at <a href="https://em-lyon.com/en" target="_blank">emlyon business school</a>, France.</h1>
 						</header>
-						<p style="font-size: 26px; line-height:134%">At the intersection of organization theory and cultural sociology, my research dives into the influence of culture and meaning structures across different levels. Using both quantitative and qualitative methods, I apply a cultural perspective to investigate phenomena like institutional persistence and social evaluation. My work spans various empirical contexts, from social housing to the vibrant landscapes of the creative industry, including areas such as restaurants, books, and movies.</p>
+						<p style="font-size: 26px; line-height:134%"> I examine the influence of culture and meaning structures across different levels. Using both quantitative and qualitative methods, I apply a cultural perspective to investigate phenomena like 
+							institutional persistence and social evaluation. My work spans various empirical contexts, from social housing to creative industry, 
+							including areas such as restaurants, books, and movies.</p>
 						<!-- <ul class="actions">
 							<li><a href="#" class="button">Learn More</a></li>
 						</ul>-->
@@ -72,15 +74,15 @@
 						I am an organizational researcher and a PhD candidate at emlyon business school, where I teach Tranformations and Microeconomics in the 
 						<a href="https://masters.em-lyon.com/fr/programme-grande-ecole-admission-apres-bac-3-4-5" target="_blank">PGE</a> program. 
 						In my research, I use various machine learning techniques such as word embeddings, and structural/dynamic topic modeling to identify patterns in large corpora.
-						I am a part of the Strategy & Organization (<a href="https://www.storm.em-lyon.com/people/parham-ashur/" target="_blank">STORM</a>), and
-						 Work, Technology, and Organization (<a href="https://work.em-lyon.com/parham-ashur/" target="_blank">WTO</a>) research centers at Emlyon. 
+						I am a part of the Strategy & Organization (<a href="https://www.storm.em-lyon.com/people/parham-ashur/" target="_blank">STORM</a>) and
+						InvEnt research centers at Emlyon. 
 						<br><br>
 						Previously, I worked as a research analyst at École normale supérieure (ENS) and Edelman Intelligence in Paris. 
 						I studied economics at Allameh Tabataba'i University (BA) and the University of Amsterdam (MSc), as well as innovation and management at SKEMA Business School (MSc).</p>
 
 						<ul class="actions">
 							<li><a href="pdf/Parham_ASHUR_CV_March-2024.pdf" download="Parham_ASHUR_CV_March-2024" class="button" target="_blank">Download my CV</a></li>
-							<li><a href="https://github.com/parham-ashur" class="button" target="_blank">Check my GitHub</a></li>
+							<!-- <li><a href="https://github.com/parham-ashur" class="button" target="_blank">Check my GitHub</a></li>-->
 						</ul>
 					</section> 
 
@@ -106,6 +108,18 @@
 					<section id="two">
 						<h2>Updates</h2>
 						<div class="row">
+							<article class="col-6 col-12-xsmall work-item">
+								<h3>OS/OT PDW Barcelona 2024</h3>
+								<p>How do expert endorsements influence laypeople evaluations?</p>
+							</article>	
+							<article class="col-6 col-12-xsmall work-item">
+								<h3>DRUID 2024</h3>
+								<p>How did the institution of public housing persist for nearly a century? A paper on the “Dynamic Persistence of Institutions" (with C. Brandtner and B. Srinivasa Desikan). Nominated for the Best Paper Awards.</p>
+							</article>	
+							<article class="col-6 col-12-xsmall work-item">
+								<h3>EGOS 2024</h3>
+								<p>How did the institution of public housing persist for nearly a century? A paper on the “Dynamic Persistence of Institutions" (with C. Brandtner and B. Srinivasa Desikan)</p>
+							</article>	
 							<article class="col-6 col-12-xsmall work-item">
 								<h3>SCANCOR 2023</h3>
 								<p>I was selected to participate in SCANCOR PhD workshop in institutional theory in Oslo.</p>
@@ -141,11 +155,10 @@
 					<section id="two">
 						<h2>Collaborators</h2>
 						<p>
-							I am grateful to my collaborators who have helped and guided me in this journey. 
-							If you are looking for a reference, these people can probably tell you all about me.
-							At emlyon, Bernard Forgues, Christof Brandtner, Tao Han, and Thinley Tharchen are my collaborators. 
-							Outside emlyon, I have worked with Anne Christophe and Naomi Havron (École Normale Supérieure), 
-							Felix Schoeller (Media Lab, MIT), and Gönül Doğan (University of Cologne).  
+							I owe immense gratitude to the brilliant colleagues who have shared this journey with me, each contributing unique insights and guidance. 
+							For a deeper understanding of my work and approach, these individuals are the best to ask. At emlyon, I’ve had the honor of collaborating 
+							with Bernard Forgues, Christof Brandtner, Tao Han, and Thinley Tharchen. Beyond emlyon, my work has been enriched through partnerships 
+							with Anne Christophe and Naomi Havron at École Normale Supérieure, Felix Schoeller at MIT’s Media Lab, and Gönül Doğan at the University of Cologne.
 						</p>
 
 					</section> 
