--- a/index.html
+++ b/index.html
@@ -71,11 +71,11 @@
 					<section id="two">
 						<h2>About me</h2>
 						<p style="font-size: 26px; line-height:134%">
-						I am an organizational researcher and a PhD candidate at emlyon business school, where I teach Tranformations and Microeconomics in the 
+						I am an organizational researcher and a PhD candidate at EM Lyon Business School, where I teach Strategy and Microeconomics in the 
 						<a href="https://masters.em-lyon.com/fr/programme-grande-ecole-admission-apres-bac-3-4-5" target="_blank">PGE</a> program. 
-						In my research, I use various machine learning techniques such as word embeddings, and structural/dynamic topic modeling to identify patterns in large corpora.
+						In my research, I use machine learning techniques such as word embeddings and structural/dynamic topic modeling to identify patterns in large corpora.
 						I am a part of the Strategy & Organization (<a href="https://www.storm.em-lyon.com/people/parham-ashur/" target="_blank">STORM</a>) and
-						InvEnt research centers at Emlyon. 
+						 (<a href="https://sites-wordpress.em-lyon.com/invent/" target="_blank">InvEnt</a>) research centers at EM Lyon. 
 						<br><br>
 						Previously, I worked as a research analyst at École normale supérieure (ENS) and Edelman Intelligence in Paris. 
 						I studied economics at Allameh Tabataba'i University (BA) and the University of Amsterdam (MSc), as well as innovation and management at SKEMA Business School (MSc).</p>
@@ -533,8 +533,8 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 						<li><a href="mailto:ashur@em-lyon.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 					<ul class="copyright">
-						<li><a href="https://em-lyon.com/en" target="_blank">Emlyon Business School</a></li><li><a href="https://www.storm.em-lyon.com/people/parham-ashur/" target="_blank">STORM</a>
-						</li><li><a href="https://work.em-lyon.com/parham-ashur/" target="_blank">WTO</a></li><li></li>
+						<li><a href="https://em-lyon.com/en" target="_blank">EM Lyon Business School</a></li><li><a href="https://www.storm.em-lyon.com/people/parham-ashur/" target="_blank">STORM</a>
+						</li>
 					</ul>
 				</div>
 			</footer>
