--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<title>Parham Ashur | PhD candidate | emlyon</title>
 		<meta name="description" content="I am a social scientist in the field of management and organization studies
 		at Emlyon Business School.">
-		<meta name="keywords" content="Organizational Theory, Culture, Institution, Social Evaluation">
+		<meta name="keywords" content="Organizational Theory, Culture, Institution, Social Evaluation, Topic modeling, Word embedding">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
