--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		
 		<title>Parham Ashur | PhD candidate | emlyon</title>
 		<meta name="description" content="I am a social scientist in the field of management and organization studies
-		at Emlyon Business School.">
+		at EM Lyon Business School.">
 		<meta name="keywords" content="Organizational Theory, Culture, Institution, Social Evaluation, Topic modeling, Word embedding">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
@@ -56,7 +56,7 @@
 					<section id="one">
 						<header class="major">
 							<h1>I am a social scientist in the field of management and organization studies
-							at <a href="https://em-lyon.com/en" target="_blank">emlyon business school</a>, France.</h1>
+							at <a href="https://em-lyon.com/en" target="_blank">EM Lyon Business School</a>, France.</h1>
 						</header>
 						<p style="font-size: 26px; line-height:134%"> I examine the influence of culture and meaning structures across different levels. Using both quantitative and qualitative methods, I apply a cultural perspective to investigate phenomena like 
 							institutional persistence and social evaluation. My work spans various empirical contexts, from social housing to creative industry, 
