--- a/index.html
+++ b/index.html
@@ -121,6 +121,10 @@
 								<p>How did the institution of public housing persist for nearly a century? A paper on the “Dynamic Persistence of Institutions" (with C. Brandtner and B. Srinivasa Desikan)</p>
 							</article>	
 							<article class="col-6 col-12-xsmall work-item">
+								<h3>KTO PDW at SKEMA 2024</h3>
+								<p>Presented a paper on expert endorsements looking at Google Maps review data.</p>
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
 								<h3>SCANCOR 2023</h3>
 								<p>I was selected to participate in SCANCOR PhD workshop in institutional theory in Oslo.</p>
 							</article>
