--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		</script>
 		
 		<title>Parham Ashur | PhD candidate | emlyon</title>
-		<meta name="description" content="I am a social scientist in the field of management and organization studies
+		<meta name="description" content="I am a PhD candidate in the field of management and organization studies
 		at EM Lyon Business School.">
 		<meta name="keywords" content="Organizational Theory, Culture, Institution, Social Evaluation, Topic modeling, Word embedding">
 		<meta charset="utf-8" />
