--- a/index.html
+++ b/index.html
@@ -109,6 +109,10 @@
 						<h2>Updates</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
+								<h3>Publication in Organization Studies</h3>
+								<p>I’m excited to share that our paper—born from a spark of curiosity and countless hours of collaboration with Christof Brandtner and Bhargav Srinivasa Desikan—is now out!</p>
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
 								<h3>OS/OT PDW Barcelona 2024</h3>
 								<p>How do expert endorsements influence laypeople evaluations?</p>
 							</article>	
