--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<h3>OS/OT PDW Barcelona 2024</h3>
-								<p>How do expert endorsements influence laypeople evaluations?</p>
+								<p>How do expert endorsements influence laypeople's evaluations?</p>
 							</article>	
 							<article class="col-6 col-12-xsmall work-item">
 								<h3>DRUID 2024</h3>
@@ -146,7 +146,7 @@
 							</article>							
 							<article class="col-6 col-12-xsmall work-item">
 								<h3>Interviewing management scholars (2023-)</h3>
-								<p>To better understand the complexity of publication process, Li Ben, Taha Ebrahimnazari, Cristian Taborda, and I 
+								<p>To better understand the complexity of the publication process, Li Ben, Taha Ebrahimnazari, Cristian Taborda, and I 
 									interview top scholars in the field. Check out the
 									<a href="https://www.youtube.com/channel/UCz9BrEEizi7dKWt9kpBlARg" target="_blank">STORM Youtube Channel</a>.</p>
 							</article>
