--- a/index.html
+++ b/index.html
@@ -539,6 +539,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 						<!--<li><a href="https://github.com/parham-ashur" class="icon brands fa-github" target="_blank"><span class="label">Github</span></a></li>-->
 						<li><a href="https://www.linkedin.com/in/parham-ashur" class="icon brands fa-linkedin" target="_blank"><span class="label">Linkedin</span></a></li>
 						<li><a href="mailto:ashur@em-lyon.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+						<li><a href="pdf/Parham_Ashur_CV_jan 25.pdf" download="Parham_Ashur_CV_jan 25.pdf" class="fa-solid fa-address-card" target="_blank">CV</a></li>
 					</ul>
 					<ul class="copyright">
 						<li><a href="https://em-lyon.com/en" target="_blank">EM Lyon Business School</a></li><li><a href="https://www.storm.em-lyon.com/people/parham-ashur/" target="_blank">STORM</a>
