--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 				<!-- One -->
 					<section id="one">
 						<header class="major">
-							<h1>I am a social scientist in the field of management and organization studies
+							<h1>I am a PhD candidate in the field of management and organization studies
 							at <a href="https://em-lyon.com/en" target="_blank">EM Lyon Business School</a>, France.</h1>
 						</header>
 						<p style="font-size: 26px; line-height:134%"> I examine the influence of culture and meaning structures across different levels. Using both quantitative and qualitative methods, I apply a cultural perspective to investigate phenomena like 
