--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
 								<h3>Publication in Organization Studies</h3>
-								<p>I’m excited to share that our paper—born from a spark of curiosity and countless hours of collaboration with Christof Brandtner and Bhargav Srinivasa Desikan—is now out!</p>
+								<p>I’m excited to share that our paper (w/ Christof Brandtner and Bhargav Srinivasa Desikan) on how  an ambitious idea like affordable public housing survives a century of political, economic, and cultural changes is now out!</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<h3>OS/OT PDW Barcelona 2024</h3>
