--- a/index.html
+++ b/index.html
@@ -543,7 +543,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 						    <a href="pdf/Parham_Ashur_CV_jan_25.pdf" 
 						       download="Parham_Ashur_CV_jan_25.pdf" 
 						       target="_blank" 
-						       style="text-decoration: none; font-size: 24px; padding: 5px 10px; border-bottom: none;">
+						       style="text-decoration: none; font-size: 24px; border-bottom: none;">
 						       CV
 						    </a>
 						</li>					
