--- a/index.html
+++ b/index.html
@@ -539,9 +539,10 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 						<!--<li><a href="https://github.com/parham-ashur" class="icon brands fa-github" target="_blank"><span class="label">Github</span></a></li>-->
 						<li><a href="https://www.linkedin.com/in/parham-ashur" class="icon brands fa-linkedin" target="_blank"><span class="label">Linkedin</span></a></li>
 						<li><a href="mailto:ashur@em-lyon.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+						<li><a href="pdf/Parham_Ashur_CV_jan 25.pdf" download="Parham_Ashur_CV_jan 25.pdf" target="_blank" class="icon solid fa-file"><span class="label">CV</span></a></li>
 						<li>
-						    <a href="pdf/Parham_Ashur_CV_jan_25.pdf" 
-						       download="Parham_Ashur_CV_jan_25.pdf" 
+						    <a href="pdf/Parham_Ashur_CV_jan 25.pdf" 
+						       download="Parham_Ashur_CV_jan 25.pdf" 
 						       target="_blank" 
 						       style="text-decoration: none; font-size: 24px; border-bottom: none; position: relative; top: -10px; left: -10px;">
 						       CV
