--- a/index.html
+++ b/index.html
@@ -540,7 +540,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 						<li><a href="https://www.linkedin.com/in/parham-ashur" class="icon brands fa-linkedin" target="_blank"><span class="label">Linkedin</span></a></li>
 						<li><a href="mailto:ashur@em-lyon.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
-					<ul class="icons">
+					<ul class="copyright">
 						<li><a href="pdf/Parham_Ashur_CV_Feb 25.pdf" download="Parham_Ashur_CV_Feb 25.pdf" target="_blank">Download CV</a></li>					
 					</ul>
 					<ul class="copyright">
