--- a/index.html
+++ b/index.html
@@ -45,25 +45,28 @@
 					<h2 id="name1" style="font-size: 36px; line-height: 100%; margin: 0;"><strong>Parham Ashur</strong></h2>
 					<h2 style="font-size: 24px; line-height: 100%; margin: 0;">PhD Candidate</h2>
 					<a href="mailto:ashur@em-lyon.com" style="margin: 0; display: block;">ashur@em-lyon.com</a>
-					<!--<a href="https://www.linkedin.com/in/parham-ashur" class="icon brands fa-linkedin" target="_blank"><span class="label">Linkedin</span></a>
-					<a href="mailto:ashur@em-lyon.com" class="icon solid fa-envelope"><span class="label">Email</span></a>
-					<a href="pdf/Parham_Ashur_CV_Feb 25.pdf" download="Parham_Ashur_CV_Feb 25.pdf" target="_blank">Download CV</a>
-					<a href="https://www.storm.em-lyon.com/people/parham-ashur/" target="_blank">STORM Research Center</a>	-->
-					<ul class="copyright">	
-						<li><a href="https://www.linkedin.com/in/parham-ashur" class="icon brands fa-linkedin" target="_blank"><span class="label">Linkedin</span></a></li>
-						<li><a href="mailto:ashur@em-lyon.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
-					</ul>
-					<ul class="copyright">
-						<li><a href="pdf/Parham_Ashur_CV_Feb 25.pdf" download="Parham_Ashur_CV_Feb 25.pdf" target="_blank">Download CV</a></li>	
-						<li><a href="https://www.storm.em-lyon.com/people/parham-ashur/" target="_blank">STORM Research Center</a></li>
-					</ul>
+	
 					<!--<h2 id="name1" style="font-size: 36px; line-height:100%"><strong>Parham Ashur</strong></h2>
 					<h2 style="font-size: 24px; line-height:100%">PhD Candidate</h2>
 					<a href="mailto:ashur@em-lyon.com">ashur@em-lyon.com</a>-->
 	
 				</div>
 			</header>
-
+			<!--<footer id="footer">
+				<div style="text-align: center;" class="inner">
+					<ul class="icons">
+						<!-- <li><a href="https://mobile.twitter.com/parhamashur" class="fa-brands fa-x-twitter" target="_blank"><span class="label">Twitter</span></a></li> -->
+						<!--<li><a href="https://github.com/parham-ashur" class="icon brands fa-github" target="_blank"><span class="label">Github</span></a></li>
+						<li><a href="https://www.linkedin.com/in/parham-ashur" class="icon brands fa-linkedin" target="_blank"><span class="label">Linkedin</span></a></li>
+						<li><a href="mailto:ashur@em-lyon.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+					</ul>
+					<ul class="copyright">
+						<li><a href="pdf/Parham_Ashur_CV_Feb 25.pdf" download="Parham_Ashur_CV_Feb 25.pdf" target="_blank">Download CV</a></li>	
+						<li><a href="https://www.storm.em-lyon.com/people/parham-ashur/" target="_blank">STORM Research Center</a>
+						</li>
+					</ul>
+				</div>
+			</footer>
 		<!-- Main -->
 			<div id="main">
 
