--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
 					<!-- <a href="#" class="image avatar"><img src="images/parham-pic.jpeg" alt="Parham Ashur" /></a><br>
 					-->
 					<br><br><br><br><br><br><br><br><br><be>
-					<h2 id="name1" style="font-size: 36px; line-height: 100%; margin: 0;"><strong>Parham Ashur</strong></h2>
-					<h2 style="font-size: 24px; line-height: 100%; margin: 0;">PhD Candidate</h2>
-					<a href="mailto:ashur@em-lyon.com" style="margin: 0; display: block;">ashur@em-lyon.com</a>
+					<h2 id="name1" style="font-size: 36px; line-height: 100%; margin: 0 0 10px 0;"><strong>Parham Ashur</strong></h2>
+					<h2 style="font-size: 24px; line-height: 100%; margin: 0 0 10px 0;">PhD Candidate</h2>
+					<a href="mailto:ashur@em-lyon.com" style="margin: 0;">ashur@em-lyon.com</a>
 	
 					<!--<h2 id="name1" style="font-size: 36px; line-height:100%"><strong>Parham Ashur</strong></h2>
 					<h2 style="font-size: 24px; line-height:100%">PhD Candidate</h2>
@@ -52,11 +52,11 @@
 	
 				</div>
 			</header>
-			<!--<footer id="footer">
+			<footer id="footer">
 				<div style="text-align: center;" class="inner">
 					<ul class="icons">
 						<!-- <li><a href="https://mobile.twitter.com/parhamashur" class="fa-brands fa-x-twitter" target="_blank"><span class="label">Twitter</span></a></li> -->
-						<!--<li><a href="https://github.com/parham-ashur" class="icon brands fa-github" target="_blank"><span class="label">Github</span></a></li>
+						<!--<li><a href="https://github.com/parham-ashur" class="icon brands fa-github" target="_blank"><span class="label">Github</span></a></li> -->
 						<li><a href="https://www.linkedin.com/in/parham-ashur" class="icon brands fa-linkedin" target="_blank"><span class="label">Linkedin</span></a></li>
 						<li><a href="mailto:ashur@em-lyon.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
