--- a/index.html
+++ b/index.html
@@ -37,14 +37,21 @@
 
 
 		<!-- Header -->
-			<header id="header">
+			<header id="header" style="height: 100vh; display: flex; flex-direction: column; justify-content: flex-end; text-align: center; padding-bottom: 30px;">
+			    <div class="inner">
+			        <h2 id="name1" style="font-size: 36px; line-height: 100%; margin: 0 0 10px 0;"><strong>Parham Ashur</strong></h2>
+			        <h2 style="font-size: 24px; line-height: 100%; margin: 0 0 10px 0;">PhD Candidate</h2>
+			        <a href="mailto:ashur@em-lyon.com" style="margin: 0; text-decoration: none; color: inherit;">ashur@em-lyon.com</a>
+			    </div>
+			</header>
+			<!--<header id="header">
 				<div style="text-align: center;" class="inner">
 					<!-- <a href="#" class="image avatar"><img src="images/parham-pic.jpeg" alt="Parham Ashur" /></a><br>
-					-->
+					
 					<br><br><br><br><br><br><br><br><br><be>
 					<h2 id="name1" style="font-size: 36px; line-height: 100%; margin: 0 0 10px 0;"><strong>Parham Ashur</strong></h2>
 					<h2 style="font-size: 24px; line-height: 100%; margin: 0 0 10px 0;">PhD Candidate</h2>
-					<a href="mailto:ashur@em-lyon.com" style="margin: 0;">ashur@em-lyon.com</a>
+					<a href="mailto:ashur@em-lyon.com" style="margin: 0; text-decoration: none; color: inherit;">ashur@em-lyon.com</a>
 	
 					<!--<h2 id="name1" style="font-size: 36px; line-height:100%"><strong>Parham Ashur</strong></h2>
 					<h2 style="font-size: 24px; line-height:100%">PhD Candidate</h2>
